<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, ProfileSwitcherActivity!</string>
    <string name="app_name">Profile Switcher</string>
    <string name="menu_delete">Delete schedule</string>
    <string name="current_profile">Active Profile:</string>
    <string name="calculated_current_profile">Calculated Profile:</string>
    <string name="next_change">Next Change:</string>
    <string name="timed_profile">Timed Profile:</string>

    <string name="dow_mon">Monday</string>
    <string name="dow_tue">Tuesday</string>
    <string name="dow_wed">Wednesday</string>
    <string name="dow_thu">Thursday</string>
    <string name="dow_fri">Friday</string>
    <string name="dow_sat">Saturday</string>
    <string name="dow_sun">Sunday</string>

    <string name="dow_short_mon">Mon</string>
    <string name="dow_short_tue">Tue</string>
    <string name="dow_short_wed">Wed</string>
    <string name="dow_short_thu">Thu</string>
    <string name="dow_short_fri">Fri</string>
    <string name="dow_short_sat">Sat</string>
    <string name="dow_short_sun">Sun</string>
    <string name="select_profile">&lt;Select profile></string>

    <string name="time">Time:</string>
    <string name="selected_profile">Selected Profile:</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <string name="popup_writesettings_title">Request for permission</string>
    <string name="permission_request">Profile Switcher needs permission to change system settings.
        Please enable this permission in the settings window opened next.</string>
</resources>
