<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/selectedProfileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:text="@string/selected_profile"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/profileNameSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:onClick="showTimePickerDialog">

        <TextView
            android:id="@+id/scheduleTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scheduleTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/scheduleTimeText"
            android:layout_weight="1"
            android:text="Time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/scheduleTimeEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/scheduleTime"
            android:onClick="showTimePickerDialog"
            android:text="@string/edit" />

    </RelativeLayout>

    <CheckBox
        android:id="@+id/dow_mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dow_mon" />

    <CheckBox
        android:id="@+id/dow_tue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dow_tue" />

    <CheckBox
        android:id="@+id/dow_wed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dow_wed" />

    <CheckBox
        android:id="@+id/dow_thu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dow_thu" />

    <CheckBox
        android:id="@+id/dow_fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dow_fri" />

    <CheckBox
        android:id="@+id/dow_sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dow_sat" />

    <CheckBox
        android:id="@+id/dow_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dow_sun" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickHandler"
            android:text="@string/delete" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickHandler"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickHandler"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>