<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileSwitcherActivity">

    <LinearLayout
        android:id="@+id/profilelist"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip">

                <TextView
                    android:id="@+id/currentProfileDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_profile" />

                <TextView
                    android:id="@+id/currentProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip">

                <TextView
                    android:id="@+id/caculatedCurrentProfileDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calculated_current_profile" />

                <TextView
                    android:id="@+id/caculatedCurrentProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="TextView"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip">

                <TextView
                    android:id="@+id/nextScheduledChangeDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_change" />

                <TextView
                    android:id="@+id/nextScheduledChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/timedProfileDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timed_profile" />

                <TextView
                    android:id="@+id/timedProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TableRow>
        </TableLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Configured Profiles:"
            android:textSize="8pt"
            android:textStyle="bold"></TextView>

        <ListView
            android:id="@+id/schedulelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/profilelist"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="8dp"
        android:src="@android:drawable/ic_menu_add"
        fab:fab_colorNormal="@color/app_primary"
        fab:fab_colorPressed="@color/app_primary_dark"
        fab:fab_colorRipple="@color/app_primary_dark"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_fab_hide_animation="@anim/jump_to_down"
        fab:menu_fab_show_animation="@anim/jump_from_down"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_schedule"
            fab:fab_colorNormal="@color/app_primary"
            fab:fab_colorPressed="@color/app_primary_pressed"
            fab:fab_colorRipple="@color/app_ripple"
            fab:fab_label="Profile Schedule"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_stopwatch"
            fab:fab_colorNormal="@color/app_primary"
            fab:fab_colorPressed="@color/app_primary_pressed"
            fab:fab_colorRipple="@color/app_ripple"
            fab:fab_label="Profile Timer"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>
